[workspace]
members = [
  "air",
  "core",
  "prover",
  "runner",
  "examples",
  "cli",
  "wasm"
]

[patch."https://github.com/zerosync/winterfell"]
prover = { package = "winter-prover", git = "https://github.com/entropidelic/winterfell" }
math = { package = "winter-math", git = "https://github.com/entropidelic/winterfell" }
winter-utils = { package = "winter-utils", git = "https://github.com/entropidelic/winterfell" }
winter-air = { package = "winter-air", git = "https://github.com/entropidelic/winterfell" }
winterfell = { package = "winter-verifier", git = "https://github.com/entropidelic/winterfell" }