[package]
name = "giza-air"
version = "0.1.0"
edition = "2018"

[dependencies]
winter-air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", default-features = false }
winter-utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", default-features = false }
winter-crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", default-features = false }
giza_core = { package = "giza-core", path = "../core", version = "0.1", default-features = false }
starknet_crypto = { package = "starknet-crypto", git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet_ff = { package = "starknet-ff", git = "https://github.com/xJonathanLEI/starknet-rs" }

serde = "1.0.137"
