[package]
name = "giza-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter-utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
ff = { version = "0.12", features = ["derive"] }
hex = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hex = "0.1.0"
